fixing slight spacing issue

--- a/resources/assets/sass/base/_typography.scss
+++ b/resources/assets/sass/base/_typography.scss
@@ -7,7 +7,7 @@ p {
 	font-size: 1em;
 	line-height: 1.2em;
 }
-p ~ p {
+p > p {
 	padding-top: 20px;
 }
 h1 {
